--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,9 @@
 <IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
- </IfModule>
+  RewriteEngine on
+  RewriteBase /
+  RewriteCond %{SERVER_PORT} !^443$
+  RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
+</IfModule>
