--- a/httpd.ini
+++ b/httpd.ini
@@ -2,6 +2,10 @@ RewriteEngine On
 
 RewriteBase /
 
+# 强制https
+RewriteCond %{SERVER_PORT} !^443$
+RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
+
 # Rewrite 系统规则请勿修改
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
